# viral-video-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml
docs/: architecture-v2-plan.md  content-intelligence-competitor-scoring.md  content-intelligence-data-contract.md  content-intelligence-evaluation.md  content-intelligence-metrics.md  content-intelligence-p0b-validation-20260716.md  content-intelligence-p0c-architecture-repair.md  content-intelligence-p0c-recovery-20260716.md  content-intelligence-p0c-scheme-c.md  content-intelligence-p0c-source-recovery-20260716.md  content-intelligence-p0c-uapi-gate-20260718.md  content-intelligence-p0c-v3.md  content-intelligence-p0c-validation-20260716.md  content-intelligence-search-providers.md  frontend-design.md  frontend-validation-20260715.md  interactive-intelligence-vnext-a-validation-20260722.md  interactive-intelligence-vnext-b-validation-20260723.md  interactive-intelligence-vnext.md  knowledge-coverage.md  product-mvp.md  researcher-finetuned-worker-integration-20260720.md  security-and-data.md  validation-20260713.md
frontend/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
migrations/: README  env.py
scripts/: audit_p0b_hardcoding.py  build_p0c_v3_holdout.py  build_p0c_v3_workbook.mjs  import_p0c_v3_workbook.mjs  p0c_v3_common.py  run_p0b_smoke.py  run_p0c_evaluation.py  run_p0c_scheme_c.py  run_p0c_scheme_c_gate.py  run_p0c_v3_development.py  run_p0c_v3_gate.py  validate_intelligence_eval.py
(+207 files in other folders)
