[project]
name = "viral-video-agent"
version = "0.1.0"
description = "短视频平台爆款视频分析多智能体系统"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0,<1.1.0",
    "langchain-core>=0.3.0,<1.0.0",
    "langchain-anthropic>=0.3.0,<1.0.0",
    "langchain-openai>=0.3.0,<1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "aiosqlite>=0.20.0",
    "chromadb>=0.5.0",
    "tiktoken>=0.7.0",
    "mcp>=1.0.0",
    "redis>=5.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
postgres = [
    "langgraph-store-postgres>=0.1.0",
    "psycopg[binary]>=3.0.0",
    "asyncpg>=0.30.0",
]

[build-system]
requires = ["setuptools>=40.8.0"]
build-backend = "setuptools.build_meta"

[tool.hatch.build.targets.wheel]
packages = ["src"]
